[package]
name = "tower-biscuit-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.5.0"
biscuit-auth = "2.1.0"
tower = { version = "0.4.12", default-features = false, features = ["filter"] }

[[example]]
name = "basic_read"
path = "examples/basic_read.rs"

[dev-dependencies]
hex = "0.4.3"
hyper = { version = "0.14.18", features = ["tcp", "http1", "server"] }
tokio = { version = "1.18.1", features = ["macros"] }
tokio-test = "0.4.2"
tower-test = "0.4.0"
