[package]
name = "tower-biscuit-auth"
version = "0.1.0"
edition = "2021"

authors = ["Vince Mutolo <vlmutolo@me.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/vlmutolo/tower-biscuit-auth"
homepage = "https://github.com/vlmutolo/tower-biscuit-auth"
categories = ["network-programming", "web-programming", "authentication", "cryptography"]

description = "Integrating Biscuit authentication with the Tower ecosystem."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.5.0"
biscuit-auth = "2.1.0"
tower = { version = "0.4.12", default-features = false, features = ["filter"] }

[dev-dependencies]
axum = "0.5.4"
tokio = { version = "1.18.1", features = ["macros"] }
hyper = { version = "0.14.18", features = ["tcp", "http1", "server"] }
tower-http = { version = "0.3.2", features = ["auth"] }
http = { version = "0.2.7" }
tokio-test = "0.4.2"
tower-test = "0.4.0"
anyhow = "1.0.57"
base64 = "0.13.0"
hex = "0.4.3"